# Biometric-Workshop-Suite

./: .gitignore  .htmlhintrc  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  eslint.config.js  justfile  main.py  mkdocs.yml  package-lock.json  package.json  profiles.json  pyproject.toml  render.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: admin.html  face.html  index.html  keystroke.html  mouse.html  signature.html  voice.html
mkdocs_docs/: admin.md  algorithms.md  contributing.md  deployment.md  index.md  workshop-guide.md
mkdocs_docs/modules/: face.md  index.md  keystroke.md  mouse.md  signature.md  voice.md
src/: app.py
templates/: admin.html  face.html  home.html  index.html  keystroke.html  mouse.html  signature.html  voice.html
tests/: conftest.py  test_algorithm.py  test_api.py  test_ui.py
