[project]
name = "keystroke-dynamics-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["flask", "gunicorn"]

[dependency-groups]
dev = ["ruff", "black", "mypy", "ty", "pre-commit"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
