[project]
name = "biometric-workshop"
version = "0.1.0"
description = "Interactive multi-modality biometric demonstration suite for classroom and workshop use"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.0,<4.0.0",
    "gunicorn>=25.3.0,<26.0.0",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "mkdocs-material>=9.7.6",
    "mypy>=1.20.0",
    "pre-commit>=4.5.0",
    "pytest-cov>=7.1.0",
    "pytest-playwright>=0.7.0",
    "pytest>=9.0.0",
    "ruff>=0.15.0",
    "ty>=0.0.28",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=src.app --cov-report=term-missing --cov-report=html:htmlcov"

[tool.coverage.run]
source = ["src.app"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
